--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "[1000 rows x 6 columns]"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "507"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "168"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "485"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "156"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "138"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,25 +386,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "761"
+       "43"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def last_tuesday(x):\n",
+    "    if x.strftime(\"%a\") != \"Tue\":\n",
+    "        return False\n",
     "    original_month = x.strftime(\"%m\")\n",
     "    new_date = x + timedelta(days = 7)\n",
-    "    return new_date.strftime(\"%m\") == original_month\n",
+    "    return new_date.strftime(\"%m\") != original_month\n",
     "\n",
     "df['last_tuesday'] = df[6].apply(last_tuesday)\n",
     "df['last_tuesday'].sum()"
@@ -412,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
